kubernetes/social/irc/libera/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pounce-libera
spec:
  selector:
    app: pounce-libera
  ports:
  - name: irc
    protocol: TCP
    port: 6697
    targetPort: 6697
